--- a/forest-core/pom.xml
+++ b/forest-core/pom.xml
@@ -20,8 +20,11 @@
         <jgitflow-plugin.version>1.0-m4.3</jgitflow-plugin.version>
         <versions-plugin.version>2.1</versions-plugin.version>
 
-        <!-- <jaxb-api.version>2.3.1</jaxb-api.version> -->
-        <!-- <jaxb-impl.version>2.3.0</jaxb-impl.version> -->
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jaxb-core.version>2.3.0.1</jaxb-core.version>
+        <jaxb-impl.version>2.3.7</jaxb-impl.version>
+        <jaxws-ri.version>2.3.5</jaxws-ri.version>
+
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     </properties>
 
@@ -30,26 +33,17 @@
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
+
+        <!-- <dependency> -->
+        <!--     <groupId>javax.xml.bind</groupId> -->
+        <!--     <artifactId>jaxb-api</artifactId> -->
+        <!--     <version>${jaxb-api.version}</version> -->
+        <!-- </dependency> -->
+
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-            <version>2.3.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
             <version>2.3.7</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>jaxws-ri</artifactId>
-            <version>2.3.5</version>
-            <type>pom</type>
         </dependency>
 
 
@@ -100,12 +94,6 @@
             <artifactId>jsr305</artifactId>
             <version>${jsr305.version}</version>
         </dependency>
-
-        <!-- <dependency> -->
-        <!--     <groupId>org.glassfish.jaxb</groupId> -->
-        <!--     <artifactId>jaxb-runtime</artifactId> -->
-        <!--     <version>2.3.1</version> -->
-        <!-- </dependency> -->
 
         <dependency>
             <groupId>commons-io</groupId>
