--- a/forest-core/pom.xml
+++ b/forest-core/pom.xml
@@ -24,6 +24,7 @@
         <jaxb-core.version>2.3.0.1</jaxb-core.version>
         <jaxb-impl.version>2.3.7</jaxb-impl.version>
         <jaxws-ri.version>2.3.5</jaxws-ri.version>
+        <jaxb-runtime.version>4.0.0</jaxb-runtime.version>
 
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     </properties>
@@ -34,16 +35,10 @@
             <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
 
-        <!-- <dependency> -->
-        <!--     <groupId>javax.xml.bind</groupId> -->
-        <!--     <artifactId>jaxb-api</artifactId> -->
-        <!--     <version>${jaxb-api.version}</version> -->
-        <!-- </dependency> -->
-
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.7</version>
+            <version>${jaxb-runtime.version}</version>
         </dependency>
 
 
